# laboratorium-web-app

./: Dockerfile  pyproject.toml
web_app/: main.py
