[project]
name = "web-app"
version = "0.1.0"
description = ""
authors = [
    {name = "MS S",email = "mssid@fake.org"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black (>=24.10.0,<25.0.0)",
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
